@@ -74,6 +74,7 @@
 - OpenCL Kernel: Move kernel binary buffer from heap to stack memory
 - OpenCL Kernel: Refactored read_kernel_binary to load only a single kernel for a single device
 - Outfile Check: Fixed a memory leak for failed outfile reads
+- Restore: Add some checks on the rd->cwd variable in restore case
 - Rule Engine: Fixed several memory leaks in case loading of rules failed
 - Session Management: Fixed several memory leaks in case profile- or install-folder setup failed
 - OpenCL Header: Updated CL_* errorcode to OpenCL 1.2 standard
